<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.dapla.secrets</groupId>
    <artifactId>dapla-secret-manager-provider-google-java-api</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Dapla Secrets Provider Google Java API</name>
    <description>Dapla Secrets Provider Google Java API</description>
    <url>https://github.com/statisticsnorway/</url>
    <inceptionYear>2020</inceptionYear>

    <properties>
        <java.version>11</java.version>
        <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>
    </properties>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ove Ranheim</name>
            <email>ove.ranheim@gmail.com</email>
            <url>https://www.linkedin.com/in/oranheim/</url>
            <organization>Capra Consulting AS</organization>
            <organizationUrl>https://www.capraconsulting.no/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/statisticsnorway/dapla-secret-manager-provider-google-java-api.git</connection>
        <developerConnection>scm:git:git@github.com:statisticsnorway/dapla-secret-manager-provider-google-java-api.git
        </developerConnection>
        <url>https://github.com/statisticsnorway/dapla-secret-manager-provider-google-java-api/tree/master</url>
        <tag>HEAD</tag>
    </scm>

    <dependencies>
        <dependency>
            <groupId>no.ssb.dapla.secrets</groupId>
            <artifactId>dapla-secrets-client-api</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-secretmanager</artifactId>
            <version>1.2.3</version>
        </dependency>

        <dependency>
            <groupId>no.ssb.config</groupId>
            <artifactId>dynamic-configuration</artifactId>
            <version>0.4</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.6.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>${module.build.sourceEncoding}</encoding>
                    <meminitial>64m</meminitial>
                    <maxmem>512m</maxmem>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                    <argLine>
                        --illegal-access=deny
                        -Xmx1500m
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
